added presentations and posters

--- a/publications/index.html
+++ b/publications/index.html
@@ -102,6 +102,7 @@
                                 Bharath Muppasani, Vishal Pallagani, Biplav Srivastava, Forest Agostinelli<br>
                                 <a href='./papers_local/Rubik_s_Cube___HSDIP_camera_submission.pdf'
                                     target="_blank">[Paper]</a>
+                                <a href="./presentations/RC_HSDIP_ICAPS24.pdf" target="_blank">[Slides]</a>
                                 <span class="tag tag-type">Workshop</span>
                                 <span class="tag tag-method">Automated Planning</span>
                                 <br>
@@ -120,6 +121,7 @@
                                     (ICAPS) - Demonstration Track (ICAPS-24 Demo)</i><br>
                                 Bharath Muppasani, Vishal Pallagani, Biplav Srivastava<br>
                                 <a href='./papers_local/RC_ICAPS_24_Demo.pdf' target="_blank">[Paper]</a>
+                                <a href="./presentations/RC_ICAPS-24_Demo Poster.pdf" target="_blank">[Poster]</a>
                                 <a href='https://youtu.be/YQZ2sj-x5js' target="_blank">[Video]</a>
                                 <span class="tag tag-type">Demo</span>
                                 <span class="tag tag-method">Automated Planning</span>
@@ -154,6 +156,8 @@
                                 Bharath Muppasani, Vignesh Narayanan, Biplav Srivastava, Michael N. Huhns<br>
                                 <a href='./papers_local/InfoSpread_AAAI24_Demo.pdf' target="_blank">[Paper]</a>
                                 <a href="./papers_local/AAAI-24_Demo_Poster.pdf" target="_blank">[Poster]</a>
+                                <a href="https://drive.google.com/file/d/19d65zjSoFBSngCIPrteT0_DOlymmkEiM/view?usp=drive_link"
+              target="_blank">[Video]</a>
                                 <span class="tag tag-type">Demo</span>
                                 <span class="tag tag-method">Automated Planning</span>
                                 <span class="best-demo-badge">Best Demo at AAAI-24</span>
@@ -369,6 +373,7 @@
                                 Bharath Muppasani, Cheyyur Jaya Anand, Chinmayi Appajigowda, Biplav Srivastava, Lokesh
                                 Johri<br>
                                 <a href='https://arxiv.org/pdf/2209.00987.pdf' target="_blank">[Paper]</a>
+                                <a href="./presentations/PowerIoT_IAAI_Presentation.pdf" target="_blank">[Slides]</a>
                                 <span class="tag tag-type">Conference</span>
                                 <span class="tag tag-method">Data Analysis</span>
                                 <span class="tag tag-domain">Power IoT</span>
