--- a/demos/index.html
+++ b/demos/index.html
@@ -159,6 +159,9 @@
           </div>
           <div style="flex:1">
             <h3 class="card-text">ElectionBot for South Carolina | 2023 <span class="tag tag-method">Chatbots</span></h3>
+            <p>Here, we demonstrate how a chatbot built with the SafeChat architecture and using official FAQs (questions and their answers) 
+               from South Carolina will answer to any user question. The chatbot should only answer when it is confident of the
+               question. The chatbot can make answers consumable but will not cook up (hallucinate) new answers.</p>
             <a href="https://onlinelibrary.wiley.com/doi/full/10.1002/aaai.12109" target="_blank"
               rel="noopener noreferrer">[Paper]</a>
             <a href="http://casy.cse.sc.edu/Election-Chatbot-SC-main/" target="_blank"
@@ -178,6 +181,9 @@
           </div>
           <div style="flex:1">
             <h3 class="card-text">ElectionBot for Mississippi | 2023 <span class="tag tag-method">Chatbots</span></h3>
+            <p>Here, we demonstrate how a chatbot built with the SafeChat architecture and using official FAQs (questions and their answers) 
+               from Mississippi will answer to any user question. The chatbot should only answer when it is confident of the
+               question. The chatbot can make answers consumable but will not cook up (hallucinate) new answers.</p>
             <a href="https://onlinelibrary.wiley.com/doi/full/10.1002/aaai.12109" target="_blank"
               rel="noopener noreferrer">[Paper]</a>
             <a href="http://casy.cse.sc.edu/ElectionBot-MS-main/Chatbot/" target="_blank"
