--- a/demos/index.html
+++ b/demos/index.html
@@ -196,6 +196,7 @@
         <br>
         <br>
 
+        <!-- ------- Removing Univ Bot as content not correct --- 
           <div style="display:flex;justify-content: center;gap:15px;">
           <div style="flex:0.8">
             <img src='../images/univ.PNG' width="300" height="200">
@@ -214,6 +215,7 @@
         </div>
         <br>
         <br>
+      --------------- -->
         
         <div style="display:flex;justify-content: center;gap:0px;">
           <div style="flex:0.8">
