--- a/demos/index.html
+++ b/demos/index.html
@@ -158,7 +158,7 @@
             <img src='../images/ecsc.PNG' width="300" height="200">
           </div>
           <div style="flex:1">
-            <h3 class="card-text">ElectionBot for South Carolina | 2023 <span class="tag tag-method">Chatbots</span></h3>
+            <h3 class="card-text">ElectionBot for South Carolina | AI Magazine 2023 <span class="tag tag-method">Chatbots</span></h3>
             <p>Here, we demonstrate how a chatbot built with the SafeChat architecture and using official FAQs (questions and their answers) 
                from South Carolina will answer to any user question. The chatbot should only answer when it is confident of the
                question. The chatbot can make answers consumable but will not cook up (hallucinate) new answers.</p>
@@ -180,7 +180,7 @@
             <img src='../images/ecms.PNG' width="300" height="200">
           </div>
           <div style="flex:1">
-            <h3 class="card-text">ElectionBot for Mississippi | 2023 <span class="tag tag-method">Chatbots</span></h3>
+            <h3 class="card-text">ElectionBot for Mississippi | AI Magazine 2023 <span class="tag tag-method">Chatbots</span></h3>
             <p>Here, we demonstrate how a chatbot built with the SafeChat architecture and using official FAQs (questions and their answers) 
                from Mississippi will answer to any user question. The chatbot should only answer when it is confident of the
                question. The chatbot can make answers consumable but will not cook up (hallucinate) new answers.</p>
