--- a/demos/index.html
+++ b/demos/index.html
@@ -101,6 +101,45 @@
 
         <div style="display:flex;justify-content: center;gap:0px;">
           <div style="flex:0.8">
+            <iframe width="300" height="200" src="https://drive.google.com/file/d/1SN0-gelnUFwMfAdZr0tTV6rtbBkCQH9q/view?usp=drive_link" title="ROSE Demo"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen></iframe>
+          </div>
+        <div style="flex:1">
+          <h3 class="card-text">ARC: A Tool to Rate AI Systems for Bias Through a Causal Lens 
+            | 2024 <span class="tag tag-method">Trusted AI</span></h3>
+          <p>As Artificial Intelligence (AI) systems are becoming powerful, 
+            there is a growing concern about these data-driven systems
+            with respect to trust issues like exhibiting biasing which
+            may adversely impact their large-scale adoption. Here bias
+            may be with respect to protected attributes such as well-studied
+             gender, race, and age. In this paper, we introduce
+            ARC, a tool to rate AI systems for bias through a causal lens.
+            The main objective of the tool is to assist developers in building
+             better models and aid end-users in making informed decisions
+             based on the available data. The tool is extensible and
+            currently supports three different AI tasks: binary classification
+            ,sentiment analysis, and group recommendation. It gives
+            users the option of choosing data for a task and rating AI
+            systems for bias with respect to different protected attributes
+            present in the data. The rating method is system-independent
+            and the ratings given by the algorithm are causally interpretable
+            .These ratings help the user make an informed decision
+             based on the data in hand.</p>
+          <!-- <a href="https://www.researchgate.net/profile/Biplav-Srivastava/publication/358475224_ROSE_Tool_and_Data_ResOurces_to_Explore_the_Instability_of_SEntiment_Analysis_Systems/links/6203f8d0c83d2b75dffd6ecc/ROSE-Tool-and-Data-ResOurces-to-Explore-the-Instability-of-SEntiment-Analysis-Systems.pdf"
+            target="_blank" rel="noopener noreferrer">[Paper]</a> -->
+          <a href="https://drive.google.com/file/d/1SN0-gelnUFwMfAdZr0tTV6rtbBkCQH9q/view?usp=drive_link" target="_blank">[Demo Video]</b></a>
+          <a href="http://casy.cse.sc.edu/causal_rating" target="_blank" rel="noopener noreferrer">[Tool]</a>
+          <!-- <a href="../projects/rating_page/bib/rose_tool.txt" target="_blank" type="text/plain">[BibTex]</a> -->
+          <!-- <a href="../projects/teaming/index.html" target="_blank" type="text/plain">[More Details]</a> -->
+          <br>
+          <!-- <p><b>Keywords :</b> #NSF, #COVID19, #Social_Impact, #Psychological_Impact, #Addiction, #Mental_Health, #Social_Quality_Index</p> -->
+        </div>
+      </div>
+
+        <div style="display:flex;justify-content: center;gap:0px;">
+          <div style="flex:0.8">
             <iframe width="300" height="200" src="https://www.youtube.com/embed/8MUtxsfVNIU"
               title="Demo of ULTRA Tool: Team Recommendation for Researchers for Responding to Calls for Proposals"
               frameborder="0"
@@ -260,6 +299,40 @@
         </div>
         <br>
         <br>
+
+        <div style="display:flex;justify-content: center;gap:0px;">
+          <div style="flex:0.8">
+            <iframe width="300" height="200" src="https://youtu.be/QsL3nWkRGXU?si=h_sfNDyZO-_0ABbV" title="ROSE Demo"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen></iframe>
+          </div>
+
+          <div style="flex:1">
+            <h3 class="card-text">ROSE: Tool and Data ResOurces to Explore the Instability of SEntiment Analysis Systems 
+              | 2022 <span class="tag tag-method">Data Analysis</span></h3>
+            <p>Sentiment Analysis Systems (SASs) are data-driven Artificial Intelligence (AI) systems that 
+              assign a score conveying the sentiment and emotion intensity when a piece of text is given as input. 
+              Like other AI, and especially machine learning (ML) based systems, they have also exhibited 
+              instability in their values when inputs are perturbed with respect to gender and race, which can 
+              be interpreted as biased behavior. In this demonstration paper, we present ROSE, a resource 
+              for understanding the behavior of SAS systems with respect to gender. It consists of data consisting 
+              of input text and output sentiment scores and a visualization tool to explore the behavior of SAS. 
+              We calculated the output sentiment scores using off-the-shelf SASs and our deep-learning-based 
+              implementations based on published architectures.</p>
+            <a href="https://www.researchgate.net/profile/Biplav-Srivastava/publication/358475224_ROSE_Tool_and_Data_ResOurces_to_Explore_the_Instability_of_SEntiment_Analysis_Systems/links/6203f8d0c83d2b75dffd6ecc/ROSE-Tool-and-Data-ResOurces-to-Explore-the-Instability-of-SEntiment-Analysis-Systems.pdf"
+              target="_blank" rel="noopener noreferrer">[Paper]</a>
+            <a href="https://youtu.be/QsL3nWkRGXU?si=h_sfNDyZO-_0ABbV" target="_blank">[Demo Video]</b></a>
+            <a href="https://ai4society.github.io/sentiment-rating/" target="_blank" rel="noopener noreferrer">[Tool]</a>
+            <a href="../projects/rating_page/bib/rose_tool.txt" target="_blank" type="text/plain">[BibTex]</a>
+            <!-- <a href="../projects/teaming/index.html" target="_blank" type="text/plain">[More Details]</a> -->
+            <br>
+            <!-- <p><b>Keywords :</b> #NSF, #COVID19, #Social_Impact, #Psychological_Impact, #Addiction, #Mental_Health, #Social_Quality_Index</p> -->
+          </div>
+        </div>
+        <br>
+        <br>
+        
 
         <div style="display:flex;justify-content: center;gap:0px;">
           <div style="flex:0.8">
