--- a/demos/index.html
+++ b/demos/index.html
@@ -99,12 +99,9 @@
         <br>
         <br>
 
-        <div style="display:flex;justify-content: center;gap:0px;">
+        <div style="display:flex;justify-content: center;gap:15px;">
           <div style="flex:0.8">
-            <iframe width="300" height="200" src="https://drive.google.com/file/d/1SN0-gelnUFwMfAdZr0tTV6rtbBkCQH9q/view?usp=drive_link" title="ROSE Demo"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              allowfullscreen></iframe>
+            <img src='../projects/rating_page/images/arc_ui.png' width="300" height="200">
           </div>
         <div style="flex:1">
           <h3 class="card-text">ARC: A Tool to Rate AI Systems for Bias Through a Causal Lens 
