--- a/demos/index.html
+++ b/demos/index.html
@@ -297,14 +297,10 @@
         <br>
         <br>
 
-        <div style="display:flex;justify-content: center;gap:0px;">
+        <div style="display:flex;justify-content: center;gap:15px;">
           <div style="flex:0.8">
-            <iframe width="300" height="200" src="https://youtu.be/QsL3nWkRGXU?si=h_sfNDyZO-_0ABbV" title="ROSE Demo"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              allowfullscreen></iframe>
+            <img src='../projects/rating_page/images/rose.png' width="300" height="200">
           </div>
-
           <div style="flex:1">
             <h3 class="card-text">ROSE: Tool and Data ResOurces to Explore the Instability of SEntiment Analysis Systems 
               | 2022 <span class="tag tag-method">Data Analysis</span></h3>
