--- a/demos/index.html
+++ b/demos/index.html
@@ -99,9 +99,15 @@
         <br>
         <br>
 
-        <div style="display:flex;justify-content: center;gap:15px;">
+        <div style="display:flex;justify-content: center;gap:0px;">
           <div style="flex:0.8">
-            <img src='../projects/rating_page/images/arc_ui.png' width="300" height="200">
+            <iframe width="300" height="200"
+              src="https://drive.google.com/file/d/1SN0-gelnUFwMfAdZr0tTV6rtbBkCQH9q/preview"
+              title="ARC: A Tool to Rate AI Systems for Bias Through a Causal Lens"
+              alt = "ARC Tool Demo"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen></iframe>
           </div>
         <div style="flex:1">
           <h3 class="card-text">ARC: A Tool to Rate AI Systems for Bias Through a Causal Lens 
@@ -297,9 +303,15 @@
         <br>
         <br>
 
-        <div style="display:flex;justify-content: center;gap:15px;">
+        <div style="display:flex;justify-content: center;gap:0px;">
           <div style="flex:0.8">
-            <img src='../projects/rating_page/images/rose.png' width="300" height="200">
+            <iframe width="300" height="200"
+              src="https://youtu.be/QsL3nWkRGXU?si=h_sfNDyZO-_0ABbV"
+              title="ROSE: Tool and Data ResOurces to Explore the Instability of SEntiment Analysis Systems"
+              alt = "ROSE Demo"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen></iframe>
           </div>
           <div style="flex:1">
             <h3 class="card-text">ROSE: Tool and Data ResOurces to Explore the Instability of SEntiment Analysis Systems 
