--- a/publications/index.html
+++ b/publications/index.html
@@ -83,6 +83,17 @@
                         <h2>2024</h2>
                         <ul class="papers-list">
 
+                            <li><b>AI-Assisted Research Collaboration with Open Data for Fair and Effective
+                                    Response to Call for Proposals</b>
+                                </i><br>
+                                <i>AAAI AI Magazine</i><br>
+                                Siva Likitha Valluru, Michael Widener, Biplav Srivastava, Sriraam Natarajan
+                                <br>
+                                [Paper - coming soon]</a>
+                                <span class="tag tag-method">Data Analysis</span>
+                                <span class="tag tag-method">Recommender Systems</span>
+                                <br>
+
                             <li><b>BEACON: Balancing Convenience and Nutrition in Meals With Long-Term Group
                                     Recommendations and Reasoning on Multimodal Recipes</b>
                                 </i><br>
@@ -291,7 +302,7 @@
                                 <br>
 
                             <li><b>On Safe and Usable Chatbots for Promoting Voter Participation</b><br>
-                                <i>AI Magazine</i><br>
+                                <i>AAAI AI Magazine</i><br>
                                 Bharath Muppasani, Vishal Pallagani, Kausik Lakkaraju, Shuge Lei, Biplav Srivastava,
                                 Brett Robertson, Andrea Hickerson, Vignesh Narayanan<br>
                                 <a href='https://onlinelibrary.wiley.com/doi/full/10.1002/aaai.12109'
