--- a/projects/group_rec/index.html
+++ b/projects/group_rec/index.html
@@ -204,6 +204,15 @@
 
               <p><i><b>Representative Publications</b></i></p>
               <ul style="padding-left:2.5%;width:100%;vertical-align:middle">
+                <li><b>[2024] AI-Assisted Research Collaboration with Open Data for Fair and Effective
+                    Response to Call for Proposals</b>
+                  </i><br>
+                  <i>AAAI AI Magazine</i><br>
+                  Siva Likitha Valluru, Michael Widener, Biplav Srivastava, Sriraam Natarajan
+                  <br>
+                  [Paper - coming soon]
+                  <br>
+
                 <li>[2024] Promoting Research Collaboration with Open Data Driven Team Recommendation in Response to
                   Call
                   for Proposals
