--- a/publications/index.html
+++ b/publications/index.html
@@ -149,7 +149,8 @@
                             <li><b>Promoting Research Collaboration with Open Data Driven Team Recommendation in
                                     Response to Call for Proposals</b><br>
                                 <i>Deployed Application paper in the Proceedings of the Thirty-Sixth Annual Conference
-                                    on Innovative Applications of Artificial Intelligence (AAAI/IAAI-24)</i>(AR=31%)<br>
+                                    on Innovative Applications of Artificial Intelligence (AAAI/IAAI-24)</i>
+                                (AR=31%)<br>
                                 Siva Likitha Valluru, Biplav Srivastava, Sai Teja Paladi, Siwen Yan, Sriraam
                                 Natarajan<br>
                                 <a href='./papers_local/ULTRA-IAAI_AAAI2024_Deployed_Application_Track.pdf'
@@ -168,7 +169,7 @@
                                 <a href='./papers_local/InfoSpread_AAAI24_Demo.pdf' target="_blank">[Paper]</a>
                                 <a href="./papers_local/AAAI-24_Demo_Poster.pdf" target="_blank">[Poster]</a>
                                 <a href="https://drive.google.com/file/d/19d65zjSoFBSngCIPrteT0_DOlymmkEiM/view?usp=drive_link"
-              target="_blank">[Video]</a>
+                                    target="_blank">[Video]</a>
                                 <span class="tag tag-type">Demo</span>
                                 <span class="tag tag-method">Automated Planning</span>
                                 <span class="best-demo-badge">Best Demo at AAAI-24</span>
@@ -268,8 +269,7 @@
                                 Biplav Srivastava<br>
                                 <a href='https://dl.acm.org/doi/fullHtml/10.1145/3604237.3626867'
                                     target="_blank">[Paper]</a>
-                                <a href='./presentations/ICAIF2023_KL_Pres.pdf'
-                                    target="_blank">[Slides]</a>
+                                <a href='./presentations/ICAIF2023_KL_Pres.pdf' target="_blank">[Slides]</a>
                                 <span class="tag tag-type">Conference</span>
                                 <span class="tag tag-method">Chatbots</span>
                                 <span class="tag tag-domain">Finance</span>
@@ -281,8 +281,7 @@
                                     Systems, and Applications: IEEE TPS'23, Atlanta, 2023</i><br>
                                 Kausik Lakkaraju, Aniket Gupta, Biplav Srivastava, Marco Valtorta, Dezhi Wu<br>
                                 <a href='./papers_local/M_SAS_Final_IEEE.pdf' target="_blank">[Paper]</a>
-                                <a href='./presentations/IEEETPS2023_KL_Pres.pdf'
-                                target="_blank">[Slides]</a>
+                                <a href='./presentations/IEEETPS2023_KL_Pres.pdf' target="_blank">[Slides]</a>
                                 <span class="tag tag-type">Conference</span>
                                 <span class="tag tag-method">Trust Rating</span>
                                 <br>
@@ -418,8 +417,7 @@
                                 Kausik Lakkaraju, Sai Krishna Revanth Vuruma, Vishal Pallagani, Bharath Muppasani,
                                 Biplav Srivastava<br>
                                 <a href='https://arxiv.org/abs/2307.07422' target="_blank">[Paper]</a>
-                                <a href='./presentations/FinPlan2023_KL_Pres.pdf'
-                                target="_blank">[Slides]</a>
+                                <a href='./presentations/FinPlan2023_KL_Pres.pdf' target="_blank">[Slides]</a>
                                 <span class="tag tag-type">Workshop</span>
                                 <span class="tag tag-method">Trust Rating</span>
                                 <span class="tag tag-domain">Finance</span>
@@ -458,8 +456,7 @@
                                 <i>Conference on Artificial Intelligence, Ethics and Society (AIES) 2022</i><br>
                                 Kausik Lakkaraju<br>
                                 <a href='https://dl.acm.org/doi/10.1145/3514094.3539556' target="_blank">[Paper]</a>
-                                <a href='./presentations/AIES2022_KL_Pres.pdf'
-                                target="_blank">[Slides]</a>
+                                <a href='./presentations/AIES2022_KL_Pres.pdf' target="_blank">[Slides]</a>
                                 <span class="tag tag-type">Conference</span>
                                 <span class="tag tag-method">Trust Rating</span>
                                 <br>
