--- a/publications/index.html
+++ b/publications/index.html
@@ -87,7 +87,8 @@
                                     Response to Call for Proposals</b>
                                 </i><br>
                                 <i>AAAI AI Magazine</i><br>
-                                Siva Likitha Valluru, Michael Widener, Biplav Srivastava, Sriraam Natarajan
+                                Siva Likitha Valluru, Michael Widener, Biplav Srivastava, Sriraam Natarajan, Sugata
+                                Gangopadhyay
                                 <br>
                                 [Paper - coming soon]</a>
                                 <span class="tag tag-method">Data Analysis</span>
