--- a/demos/index.html
+++ b/demos/index.html
@@ -302,17 +302,19 @@
         </div>
         <br>
         <br>
-
-        <div style="display:flex;justify-content: center;gap:0px;">
+        <!-- <div style="display:flex;justify-content: center;gap:15px;">
           <div style="flex:0.8">
-            <iframe width="300" height="200"
-              src="https://youtu.be/QsL3nWkRGXU?si=h_sfNDyZO-_0ABbV"
-              title="ROSE: Tool and Data ResOurces to Explore the Instability of SEntiment Analysis Systems"
-              alt = "ROSE Demo"
+            <iframe width="300" height="200" src="https://youtu.be/QsL3nWkRGXU?si=OSVKSbr8Q5SAXZlG"
+              title="ROSE: Tool and Data ResOurces to Explore the Instability of SEntiment Analysis Systems" 
               frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              alt = "ROSE Demo"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen></iframe>
-          </div>
+          </div> -->
+          <div style="display:flex;justify-content: center;gap:0px;">
+            <div style="flex:0.8">
+              <img src='../projects/rating_page/images/rose.png' width="300" height="200">
+            </div>
           <div style="flex:1">
             <h3 class="card-text">ROSE: Tool and Data ResOurces to Explore the Instability of SEntiment Analysis Systems 
               | 2022 <span class="tag tag-method">Data Analysis</span></h3>
