--- a/members/index.html
+++ b/members/index.html
@@ -174,10 +174,25 @@
                             <br><br>
                         </figcaption>
 
-                        <!--Leave this in as placeholder.-->
+                        <img src="images_members/nitin.jpeg">
                         <figcaption style="padding-top: -10%;">
-                            &nbsp
+                            <b>Nitin Gupta</b><br><br>
+                            <a target="_blank" href="https://www.linkedin.com/in/niting9/">Homepage</a>,
+                            <a target="_blank" href="mailto:niting@email.sc.edu">niting@email.sc.edu</a>
+                            <br><br>
+                            Research Interests:
+                            <span class="tag tag-method">Chatbots</span>,
+                            <span class="tag tag-method">Neuro-Symbolic AI</span>
+                            <br><br>
+                            Domains:
+                            <span class="tag tag-domain">Elections</span>
+                            <br><br>
                         </figcaption>
+
+                        <!--Leave this in as placeholder.-->
+                        <!-- <figcaption style="padding-top: -10%;">
+                            &nbsp
+                        </figcaption> -->
 
                 </td>
             </tr>
