--- a/news-journal/index.html
+++ b/news-journal/index.html
@@ -50,6 +50,35 @@
               <div class="newsjournal-dot"></div>
               <div class="newsjournal-year">2024</div>
             </div>
+            
+            <!-- May 2024 -->
+            <div class="timeline-item">
+              <div class="timeline-dot"></div>
+              <div class="timeline-date month">May</div>
+              <div class="timeline-content">
+                <p><a href="https://vishalpallagani.github.io/" target="_blank">Vishal Pallagani</a> started his summer internship at IBM Research, where he will be working on selective state space models and sequential decision making.</p>
+                <p>Our <a href="https://ai4society.github.io/" target="_blank">group</a> will present their work at the International Conference on Automated Planning and Scheduling <a href="https://icaps24.icaps-conference.org/">(ICAPS)</a> from June 1st to June 7th.
+                <ul>
+                  <li> 
+                    A position paper on <a href="https://arxiv.org/abs/2401.02500" target="_blank">'On the Prospects of Incorporating Large Language Models (LLMs) in Automated Planning and Scheduling (APS)'</a>
+                  </li>
+
+                  <li>A paper on <a
+                    href="https://openreview.net/pdf?id=jxsnASl4fX"
+                    target="_blank">'The Case for Developing a Foundation Model for Planning-like Tasks from Scratch'</a>. at Planning and Reinforcement Learning <a href="https://icaps24.icaps-conference.org/program/workshops/prl/" target="_blank">(PRL)</a> Workshop</li>
+
+                    <li>A paper on <a
+                      href="https://ai4society.github.io/publications/papers_local/Rubik_s_Cube___HSDIP_camera_submission.pdf"
+                      target="_blank">'Comparing Rubik's Cube Solvability in Domain-Independent Planners Using Standard Planning Representations for Insights and Synergy with Upcoming Learning Methods'</a>. at Heuristics and Search for Domain-Independent Planning <a href="https://icaps24.icaps-conference.org/program/workshops/hsdip/" target="_blank">(HSDIP)</a> Workshop</li>
+
+                  <li>A demonstration paper on <a
+                    href="https://ai4society.github.io/publications/papers_local/RC_ICAPS_24_Demo.pdf"
+                    target="_blank">'Solving the Rubik's Cube with a PDDL Planner'</a>.</li>
+                  
+                </ul>
+                </p>
+              </div>
+            </div>
 
             <!-- April 2024 -->
             <div class="newsjournal-item">
