add traffic page

--- a/demos/index.html
+++ b/demos/index.html
@@ -55,6 +55,20 @@
 
         <div style="display:flex;justify-content: center;gap:15px;">
           <div style="flex:0.8">
+            <img src="../projects/traffic_page/images/git-incidents.gif" alt="Traffic Analysis GIF" style="width:280px; height:250px; border-radius: 10px;">
+          </div>
+          <div style="flex:1">
+            <h3 class="card-text">Traffic Data Analysis</h3>
+            <p>We analyze traffic accidents over time and across various regions, focusing on economic impact, road conditions, and incident hotspots. The insights provided help in understanding patterns and mitigating future risks.</p>
+            <a href="https://ai4society.github.io/Traffic-Data-Analysis/" target="_blank" rel="noopener noreferrer">[Demo]</a>
+            <a href="https://ai4society.github.io/projects/traffic_page/index.html" target="_blank" type="text/plain">[More Details]</a>
+          </div>
+        </div>
+        <br>
+        <br>
+
+        <div style="display:flex;justify-content: center;gap:15px;">
+          <div style="flex:0.8">
             <iframe width="300" height="200" src="https://www.youtube.com/embed/YQZ2sj-x5js"
               title="Solving the Rubik's Cube" frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
