--- a/projects/index.html
+++ b/projects/index.html
@@ -226,9 +226,9 @@
                             <!-- <span class="tag tag-method">Time-Series</span> -->
                             <span class="tag tag-method">Data Analysis</span>
                         </h3>
-                        <i><b>Team: </b>Bharath Muppasani, Saina Srivastava, Nitin Gupta, Aarohi Goel, Biplav Srivastava</i>
+                        <i><b>Team: </b>Bharath Muppasani, Nitin Gupta, Biplav Srivastava</i>
                          <!-- <i><b>Team: </b>University of South Carolina, South Carolina Department of Health and Environmental Control (DHEC), South Carolina Department of Public Safety (SCDPS), National Safety Council Southeastern Chapter (NSCSC)</i> -->
-                        <p><b>Description: </b><i> To be updated </i>Improving SC Roads Using Insights from DoT Traffic Data: Alive@25 Recommendations</p>
+                        <p><b>Description: </b>Improving SC Roads Using Insights from DoT Traffic Data: Alive@25 Recommendations</p>
                             <span>
                                 <a style="background-color: #3498db; color: white; padding: 2px 3px; text-decoration: none; border-radius: 4px; margin: 5px 0; display: inline-block;" href="./traffic_page/index.html" target="_blank"><b>More Details</b></a>
                             </span>
