--- a/projects/traffic_page/index.html
+++ b/projects/traffic_page/index.html
@@ -107,7 +107,7 @@
                                                 <li>~3,677 records/file</li>
                                             </ul>
                                         </td>
-                                        <td style="border: 1px solid black; padding: 8px;width: 60%;">Includes data on carriers involved in collisions, focusing on vehicle types, hazardous materials, and citations, with significant data missing for many variables.</td>
+                                        <td style="border: 1px solid black; padding: 8px;width: 60%;">Includes data on carriers involved in collisions, focusing on vehicle types, hazardous materials, and citations.</td>
                                     </tr>
                                     <tr>
                                         <td style="border: 1px solid black; padding: 8px;">Unit Data</td>
