traffic page update

--- a/projects/traffic_page/index.html
+++ b/projects/traffic_page/index.html
@@ -45,9 +45,9 @@
                       <i><b>Team: </b>Bharath Muppasani, Saina Srivastava, Nitin Gupta, Aarohi Goel, Biplav Srivastava</i><br>
                       <i><b>Collaborators: </b>AIISC - University of South Carolina, South Carolina Department of Health and Environmental Control (DHEC), South Carolina Department of Public Safety (SCDPS), National Safety Council Southeastern Chapter (NSCSC)</i>
                       <br>
-                      <!-- <i><b>Authors: </b>Kausik Lakkaraju, Vinamra Palaiya, Sai Teja Paladi, Chinmayi Appajigowda, Biplav Srivastava, Lokesh Johri</i> -->
-                      <br>
                     </p>
+                    <p>In summer 2024, we analyzed traffic collision data from 2017 to 2022, covering various aspects such as location, occupant details, and vehicle information. The project involved creating interactive visualizations to understand patterns in collision incidents across different county categories (Urban, Mostly Rural, Rural). Key insights included identifying high-risk urban counties, economic impact of collisions, observing trends in collision rates and Alive@25 program participation.</p>
+
                     <ul style="padding-left: 20px; font-size: 16px; color: #333;">
                       <li>Traffic accidents visualization is provided at the following page - <a href="https://ai4society.github.io/Traffic-Data-Analysis/" target="_blank" style="
                         display: inline-block;
