traffic page update

--- a/projects/index.html
+++ b/projects/index.html
@@ -226,7 +226,7 @@
                             <!-- <span class="tag tag-method">Time-Series</span> -->
                             <span class="tag tag-method">Data Analysis</span>
                         </h3>
-                        <i><b>Team: </b>Bharath Muppasani, Nitin Gupta, Biplav Srivastava</i>
+                        <i><b>Team: </b>Bharath Muppasani, Nitin Gupta, Biplav Srivastava, Lucas Vasconcelos</i>
                          <!-- <i><b>Team: </b>University of South Carolina, South Carolina Department of Health and Environmental Control (DHEC), South Carolina Department of Public Safety (SCDPS), National Safety Council Southeastern Chapter (NSCSC)</i> -->
                         <p><b>Description: </b>The project aims to enhance road safety in South Carolina by analysing traffic data provided by Department of Transportation. We focused on identifying collision patterns and evaluating the Alive@25 program's impact to develop targeted recommendations for reducing accidents and improving road safety initiatives across urban and rural areas.</p>
                             <span>
