--- a/demos/index.html
+++ b/demos/index.html
@@ -55,10 +55,24 @@
 
         <div style="display:flex;justify-content: center;gap:15px;">
           <div style="flex:0.8">
+            <img src="../projects/llm_page/images/election_qa.png" alt="Traffic Analysis GIF" style="width:280px; height:200px; border-radius: 10px;">
+          </div>
+          <div style="flex:1">
+            <h3 class="card-text">Election-related Questions Around the World | 2024</h3>
+            <p>This website organizes election-related questions by country, highlighting diverse geopolitical contexts and allowing users to submit questions specific to their nation.</p>
+            <a href="https://ai4society.github.io/election-dataset/" target="_blank" rel="noopener noreferrer">[Webpage]</a>
+            <!-- <a href="https://ai4society.github.io/projects/traffic_page/index.html" target="_blank" type="text/plain">[More Details]</a> -->
+          </div>
+        </div>
+        <br>
+        <br>
+
+        <div style="display:flex;justify-content: center;gap:15px;">
+          <div style="flex:0.8">
             <img src="../projects/traffic_page/images/git-incidents.gif" alt="Traffic Analysis GIF" style="width:280px; height:250px; border-radius: 10px;">
           </div>
           <div style="flex:1">
-            <h3 class="card-text">Traffic Data Analysis</h3>
+            <h3 class="card-text">Traffic Data Analysis | 2024</h3>
             <p>We analyze traffic accidents over time and across various regions, focusing on economic impact, road conditions, and incident hotspots. The insights provided help in understanding patterns and mitigating future risks.</p>
             <a href="https://ai4society.github.io/Traffic-Data-Analysis/" target="_blank" rel="noopener noreferrer">[Demo]</a>
             <a href="https://ai4society.github.io/projects/traffic_page/index.html" target="_blank" type="text/plain">[More Details]</a>
