--- a/patents/index.html
+++ b/patents/index.html
@@ -78,7 +78,7 @@
                         <em>Biplav Srivastava, Kausik Lakkaraju, Revathy Venkataramanan, Vishal Pallagani, Vedant Khandelwal</em>
                     </li>
                     <li>
-                        <strong>USC 1532 - <a href="https://image-ppubs.uspto.gov/dirsearch-public/print/downloadPdf/12067983">US 12,067,983 (awarded: Aug 2024)</a> </strong>
+                        <strong>USC 1532 - <a href="https://image-ppubs.uspto.gov/dirsearch-public/print/downloadPdf/12067983">US 12,067,983 (awarded: Aug 2024)</a>, </strong>
                         Robust Useful and General Task-Oriented Virtual Assistants<br>
                         <em>Biplav Srivastava, Kausik Lakkaraju, Revathy Venkataramanan, Vishal Pallagani, Vedant Khandelwal, Joey Yip</em>
                     </li>
